--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Yoon # the main title
+title: Jay # the main title
 
-tagline: Yoon's blog # it will display as the sub-title
+tagline: Jay's blog # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   spring, spring boot, jpa, IT, 스프링
@@ -76,7 +76,7 @@ theme_mode: dark # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/avatar/avatar.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
