--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Jay # the main title
+title: Jay's blog # the main title
 
-tagline: Jay's blog # it will display as the sub-title
+tagline: Backend Developer # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   spring, spring boot, jpa, IT, 스프링
